# CRUD_app

./: .gitignore  AddUserWindow.py  AdminWindow.py  BirthdayWindow.py  CRUD.py  Database.py  MainWindow.py  PasswordRecovery.py  README.md  Usercreation.py  login.db  notes.txt  pyproject.toml
